--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,3 +14,12 @@
     font-size: 300%;
     padding: 15px;
 }
+
+/*Control button information*/
+#game-cont-exp {
+    font-family: Sarpanch, sans-serif;
+    font-size: 150%;
+    text-align: center;
+    padding: 15px;
+    list-style-type: none;
+}
