Style the instructions of the game

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,3 +23,11 @@
     padding: 15px;
     list-style-type: none;
 }
+
+/*Style game instructions*/
+#game-instructions {
+    font-family: Sarpanch, sans-serif;
+    text-align: center;
+    font-size: 200%;
+    letter-spacing: 4px;
+}
