--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     background-color: darkcyan;
+    height: 100vh;
 }
 
 /*Heading styling*/
@@ -31,6 +32,7 @@ body {
     text-align: center;
     padding: 15px;
     list-style-type: none;
+    color: whitesmoke;
 }
 
 /*Style game instructions*/
@@ -69,7 +71,6 @@ button {
 .icons, .social {
     text-align: center;
     font-size: 150%;
-    float: inline-end;
     padding: 20px;
     color: whitesmoke;
 }
