--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,5 +85,7 @@ button {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    color: #6495ED;
+    background: #6495ED;
+    max-width: 100%;
+    max-height: 100%;
 }
