--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Sarpanch&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ruslan+Display&display=swap');
 /*Overall styling*/
 * {
     margin: 0;
@@ -27,21 +28,22 @@ body {
 
 /*Control button information*/
 #game-cont-exp {
-    font-family: Sarpanch, sans-serif;
+    font-family: Ruslan Display, sans-serif;
     font-size: 150%;
     text-align: center;
-    padding: 15px;
+    padding: 10px;
+    letter-spacing: 4PX;
     list-style-type: none;
-    color: whitesmoke;
+    color: #cc5500;
 }
 
 /*Style game instructions*/
 #game-instructions {
-    font-family: Sarpanch, sans-serif;
+    font-family: Ruslan Display, sans-serif;
     text-align: center;
     font-size: 200%;
     letter-spacing: 4px;
-    color: whitesmoke;
+    color: #cc5500;
 }
 
 /*Start button styling*/
