--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Sarpanch&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Ruslan+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ruslan+Display&family=Slackey&display=swap');
 /*Overall styling*/
 * {
     margin: 0;
@@ -18,7 +18,7 @@ body {
 
 /*Heading styling*/
 #header {
-    font-family: Abril Fatface, sans-serif;
+    font-family: Slackey, sans-serif;
     text-align: center;
     letter-spacing: 2px;
     font-size: 300%;
@@ -53,7 +53,7 @@ body {
 }
 
 button {
-    font-family: Abril Fatface, sans-serif;
+    font-family: Slackey, sans-serif;
     font-size: 200%;
     display: block;
     margin: 0 auto;
