--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    background-image: url('../images/background.jpg');
+    background-image: url('../images/skull.jpg');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
