--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,6 +91,16 @@ button {
     max-width: 100%;
     max-height: 100%;
 }
+
+/*Back button styling*/
+
+#back-btn {
+    font-family: Slackey, sans-serif;
+    font-size: 20%;
+    color: #00cccc;
+    position: left;
+    text-decoration: none;
+}
  /*Parallax background images display*/
 
  #layer1 ,#layer2, #layer3, #layer4, #layer5, #layer6, #layer7, #layer8, #layer9 {
