Update background colour

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ body {
     background-repeat: no-repeat;
     height: 100vh;
     background-size: cover;
-    background-color: #DAA06D;
+    background-color: black;
 
 }
 
