--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,7 @@ body {
     letter-spacing: 2px;
     font-size: 300%;
     padding: 15px;
+    margin-top: 20px;
     color: #30d5c8;
 }
 
@@ -127,12 +128,36 @@ a {
 
  /*Media queries*/
 
- @media screen and (min-width: 375px) {
+ @media screen and (min-width: 320px) {
     body {
         height: 100vh;
     }
     #header {
-        font-size: 30px;
+        font-size: 22px;
+    }
+    #game-cont-exp {
+        font-size: 12px;
+    }
+    #game-instructions {
+        font-size: 12px;
+    }
+    #start-button {
+        font-size: 12px;
+    }
+    #social-media {
+        font-size: 22px;
+    }
+    .icons, .social {
+        font-size: 22px;
+    }
+ }
+
+ @media screen and (min-width: 360px) {
+    body {
+        height: 100vh;
+    }
+    #header {
+        font-size: 25px;
     }
     #game-cont-exp {
         font-size: 15px;
