Update readme bugs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,7 +136,7 @@ a {
     font-family: 'Slackey', sans-serif;
     font-size: 90%;
     color: #30d5c8;
-    background-color: bisque;
+    background-color: black;
     padding: 2px 2px;
     float: right;
  }
